<resources>
    <string name="app_name">App_Java_003</string>

    <string name="textview_title_text">Clientes</string>

    <string name="edittext_code_hint">Código</string>
    <string name="edittext_name_hint">Nombre</string>
    <string name="edittext_lastname_hint">Apellido</string>
    <string name="edittext_email_hint">Correo</string>
    <string name="edittext_age_hint">Edad</string>

    <string name="button_insert_text">Insertar</string>
    <string name="button_search_text">Buscar</string>
    <string name="button_delete_text">Eliminar</string>
    <string name="button_update_text">Actualizar</string>
    <string name="button_selectall_text">Mostrar todos los clientes</string>
    
</resources>